src/test/deca/etapeA/invalid/lex_symbol_i.deca
// Description:
//    test du lexeur pour les symboles spéciaux
//
// Resultats:
// ok

<
>
=
+
-
*
/
%
.
,
(
)
{
}
!
;
==
!=
>=
<=
&&
||
